assets/scss/_give.scss
// Give Specific Styles
$colorGrayscale-sand: #f4f4f4;
$colorGrayscale-pebble: #f0f0f0;
$colorGrayscale-stone: #e7e7e7;
$colorGrayscale-rock: #b9b9b9;
$colorGrayscale-slate: #909b9c;
$colorCru-border: #ddd;

$data-font: "freight-sans-lf-cru", "Helvetica Neue", Helvetica, sans-serif;
.data-font {font-family: $data-font;}

.no-margin-bottom { margin-bottom: 0; }
.no-margin-top { margin-top: 0; }
.small-text {font-size: 12px;}

.u-textTransformNone {
	text-transform: none !important;
}

#menu {
	display: none;
}

$gutter: 30px;

html {
	font-family: $data-font;
	height: 100%;
}

body {
	height: 100%;
}

hr.vertical-divider {
	background: #e9e9e9;
	border: none;
	display: inline-block;
	height: 100%;
	margin: 0;
	width: 1px;
}

.container,
.container-fluid {
	&:focus {
		outline: none;
	}
}

@media (max-width: 550px) {
	.container {
		width: 100%;
	}
}

.panel-plain {
	box-shadow: none;
	border: none;
}

.panel-nomargin {
	margin: 0;
}

.panel .panel-box {
	padding: 15px 29px;
	border-top: 1px solid $colorCru-border;
}

.panel-name {
	margin-bottom: 1em;
}

.panel.sign-in-panel {
	padding-top: 30px;
	padding-bottom: 30px;

	@include respond-to(supertiny) {
		padding-top: 0;
		padding-bottom: 0;
	}

	.sign-in-section {
		padding: 45px 50px;

		@include respond-to(supertiny) {
			padding: 30px;
		}

		.section-description {
			font-size: 125%;
			font-weight: normal;
			line-height: 125%;
			color: #666062;
		}
	}

}

.secondary-detail {
	max-width: 40%;
	max-height: 345px;
}

.loading {
	display: inline-block;
	height: 26px;
	width: 7px;
	border-radius:10%;
	background: #eeeeee;
	border-top-color: #ffffff;
	animation: fade1 1s infinite;
	transition: background .2s;
	vertical-align: middle;
	&.loading2 {animation: fade2 1s infinite; height: 32px;}
	&.loading3 {animation: fade3 1s infinite; height: 32px;}
	&.loading4 {animation: fade4 1s infinite; height: 26px;}
}

.loading-wrap {
	position: absolute;
	top: 50%;
	left: 50%;
}

@keyframes fade1 {	0% { background: #43B3C9; } }
@keyframes fade2 {	33% { background: #F9B625; } }
@keyframes fade3 {	66% { background: #DE8123; } }
@keyframes fade4 {	90% { background: #007398; } }

.self-service {
	margin-top: 29px;
	font-size: 125%;
}

.row {
	&.vdivide [class*='col-']:not(:last-child):after {
		background: #e0e0e0;
		width: 1px;
		content: "";
		display: block;
		position: absolute;
		top: 0;
		bottom: 0;
		right: 0;
		min-height: 70px;
	}

	@media (max-width: 991px) {
		&.vdivide [class*='col-']:not(:last-child):after {
			background: #e0e0e0;
			width: 100%;
			content: "";
			display: block;
			position: relative;
			top: 45px;
			bottom: 0;
			right: 0;
			min-height: 1px;
		}
	}

	@include respond-to(supertiny) {
		&.vdivide [class*='col-']:not(:last-child):after {
			top: 30px;
		}
	}

	&.row-eq-height {
	  display: -webkit-box;
	  display: -webkit-flex;
	  display: -ms-flexbox;
	  display:         flex;
	}
}

.panel-full-height {
	margin-bottom: 0;
	height: 100%;
}

.margin-bottom {
	margin-bottom: 2.5em;
}

.margin-top {
	margin-top: 2.5em;
}

.well-plain {
	background: none;
	border: none;
	box-shadow: none;
	padding: 30px;
}

.border-right {
	border-right: 1px solid lighten($colorGrayscale-text, 60%);
	@include respond-to(small) {
		border: none;
	}
	@include respond-to(extrasmall) {
		border: none;
	}
}

.border-bottom-small {
	@include respond-to(small) {
		border-bottom: 1px solid lighten($colorGrayscale-text, 60%);
		margin-bottom: 1.5em;
		padding-bottom: 1.5em;
	}
	@include respond-to(extrasmall) {
		border-bottom: 1px solid lighten($colorGrayscale-text, 60%);
		margin-bottom: 1.5em;
		padding-bottom: 1.5em;
	}
}

.border-top-small {
  border-top: 1px solid $colorCru-border;
  margin-top: 1em;
  padding-top: 1em;
}

.title-margin {
	margin: 1.5em 0;
	@include respond-to(small) {
		margin: .75em auto;
	}
	@include respond-to(extrasmall) {
		margin: .75em auto;
	}
}

.sign-in-leadin {
	font-size: 18px;
	line-height: 135%;
	max-width: 265px;
	text-align: center;
	margin: 1em auto;
}

.radio-method,
.radio-custom-amount {
	label {
		font-weight: normal;
	}
	.expiring {
		text-indent: 60px;
		font-size: 1em;
		line-height: 1em;
		color: red;
	}
	img {
		width: 40px;
		height: auto;
		margin-right: $gutter*.5;
		display: inline-block;
		vertical-align: middle;
	}
	input[type="radio"] {
		display: inline-block;
		float: none;
		margin: 0;
		margin-right: $gutter*.5;
		position: static;
		vertical-align: 0%;
	}
}

.btn-xs,
.btn-sm {
	font-size: .85rem;
	font-weight: normal;
}

.table-payment-history {
	thead {
		th {
			font-weight: 500;
			font-size: 16px;
			text-transform: uppercase;
		}
	}
	tbody {
		td {
			min-height: 75px;
			height: 75px;
			vertical-align: middle !important;
			label {
				margin-bottom: 0;
			}
			.radio-method {
				label {
					float: left;
					strong {
						font-weight: 500;
					}
				}
			}
			&.status-pending {
				color: red;
			}
			&.amount {
			}
		}
	}
}

.recent-recipient-row {
	margin-bottom: $gutter;
}

.list-recurring {
	margin-bottom: 0;
	h4 {
		margin-bottom: 0;
	}
	li {
		margin-bottom: .75em;
		&:last-child {
			margin-bottom: 0;
		}
	}
	.meta {
		font-size: 1em;
	}
}

.ecfa-logo {
	margin: 0;
}

.screenContent {
    padding-top: 35px !important;
}

.panel,
.panel-body {
	p, ul {
		font-size: 100%;
	}
}

.strike {
	display: block;
	text-align: center;
	overflow: hidden;
	white-space: nowrap;

	> span {
		position: relative;
		display: inline-block;
	}

	> span:before, > span:after {
		content: "";
		position: absolute;
		top: 50%;
		width: 9999px;
		height: 1px;
		background: $colorGrayscale-rock;
	}

	> span:before {
		right: 100%;
		margin-right: 15px;
	}

	> span:after {
		left: 100%;
		margin-left: 15px;
	}
}

